# StudentFacultyDB

./: CMakeLists.txt  Faculty.cpp  Faculty.h  README.md  Simulation.cpp  Simulation.h  Student.cpp  Student.h  Tree.h  listNode.h  main.cpp  stack.h
